--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About Me | efobifrancis</title>
+  <title>About Me | immamani</title>
   <style>
     body {
       margin: 0;
@@ -74,7 +74,7 @@
     <div class="background">
       <div>
         <img src="./profile.jpg" alt="" id="profile">
-        <h1>Hello,<br>I am efobifrancis!</h1>
+        <h1>Hello,<br>I am immamani!</h1>
       </div>
 
       <h2 class="subtitle" id="head-1">About Me</h2>
